Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,24 +194,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[\"Hi Jan, I'm so glad to be working with you!\",\n",
-       " \"Hi Joe, I'm so glad to be working with you!\",\n",
+       " \"Hi Joey, I'm so glad to be working with you!\",\n",
        " \"Hi Avi, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_employees = ['Jan', 'Joe', 'Avi']\n",
+    "new_employees = ['Jan', 'Joey', 'Avi']\n",
     "greet_employees()"
    ]
   },
