--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,18 +448,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[\"Hi Jan, I'm so glad to be working with you!\",\n",
-       " \"Hi Joe, I'm so glad to be working with you!\",\n",
+       " \"Hi Joey, I'm so glad to be working with you!\",\n",
        " \"Hi Avi, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
